Prevent auto-zoom on Safari iOS

--- a/src/App.css
+++ b/src/App.css
@@ -32,5 +32,5 @@ ul li {
 }
 
 li:first-child {
-  margin-top: 5px;
+  margin-top: 10px;
 }
